--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,10 +19,11 @@ jobs:
       uses: ajinabraham/njsscan-action@master
       with:
         args: '. --sarif --output results.sarif || true'
-    - name: Upload njsscan report
-      uses: github/codeql-action/upload-sarif@v3
+    - name: Upload Scan Report
+      uses: actions/upload-artifact@v3
       with:
-        sarif_file: results.sarif
+        name: security-scan-report
+        path: results.sarif
     - name: Convert to JSON
       run: mv results.sarif results.json
     - name: Send to Server
