--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ master ]
 jobs:
-  NodeJs Scan:
+  njsscan:
     runs-on: ubuntu-latest
     name: njsscan code scanning
     steps:
