--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,7 +18,7 @@ jobs:
       id: njsscan
       uses: ajinabraham/njsscan-action@v9
       with:
-        args: '. --sarif --output results.sarif || true'
+        args: '--directory . --sarif --output results.sarif || true'
     - name: Upload Scan Report
       uses: actions/upload-artifact@v4
       with:
@@ -28,4 +28,4 @@ jobs:
       run: cp results.sarif results.json
     - name: Send to Server
       run: |
-        curl -X POST -H "Content-Type: multipart/form-data" -F "file=@results.sarif" http://35.219.169.163:8880/callback
+        curl -X POST -H "Content-Type: multipart/form-data" -F "file=@results.json" http://35.219.169.163:8880/callback
